added next component on main page

--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -19,3 +19,19 @@ h1{
     text-transform: uppercase;
     color: $dark;
 }
+
+.total-budget-section{
+    display: flex;
+    height: 250px;
+    background: $dark;
+
+    justify-content: center;
+    align-items: center;
+
+    h2{
+        font-family: 'Lato';
+        font-weight: 300;
+        font-size: 58px;
+        color: white;
+    }
+}
