--- a/src/app/add-item-form/add-item-form.component.html
+++ b/src/app/add-item-form/add-item-form.component.html
@@ -11,7 +11,7 @@
                     <input type="text" class='input' placeholder="Description">
                 </p>
             </div>
-            <div class="field">
+            <div class="field is-narrow">
                 <button class="button is-primary">Add</button>
             </div>
         </div>
