--- a/src/app/budget-item-list/budget-item-card/budget-item-card.component.scss
+++ b/src/app/budget-item-list/budget-item-card/budget-item-card.component.scss
@@ -5,6 +5,13 @@
     width: 100%;
     position: relative;
 
+    &:hover{
+        .x-icon-button{
+            opacity: 1;
+            transform: scale(1);
+        }
+    }
+
     .x-icon-button{
         position: absolute;
         height: 34px;
@@ -13,7 +20,23 @@
         right:-17px;
         top:-17px;
         background: $dark;
+        background-image: url('../../../assets/delete_icon.svg');
+        background-repeat: no-repeat;
+        background-position: center;
+
+        transition: opacity 0.2s ease-out, transform 0.2s ease-out;
+
+        transform: scale(0);
+        opacity: 0;
+
+        cursor: pointer;
+
+        &:hover{
+            transform: scale(1.2);
+        }
     }
+
+    
 }
 
 .budget-item{
