added functionality to the adding feature in budget calculator

--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -5,7 +5,7 @@
 
             <div class="budget-items">
                 <div *ngFor="let item of budgetItems">
-                    <app-budget-item-card *ngIf="item.amount >=0" [isIncome]='true' style='margin-bottom: 20px;'>
+                    <app-budget-item-card *ngIf="item.amount >=0" [item]="item" style='margin-bottom: 20px;'>
                     </app-budget-item-card>
                 </div>
             </div>
@@ -16,7 +16,7 @@
 
             <div class="budget-items">
                 <div *ngFor="let item of budgetItems">
-                    <app-budget-item-card *ngIf="item.amount < 0" [isIncome]='false'
+                    <app-budget-item-card *ngIf="item.amount < 0" [item]="item"
                         style='display:block; margin-bottom: 20px;'>
                     </app-budget-item-card>
                 </div>
