--- a/src/app/budget-item-list/budget-item-card/budget-item-card.component.html
+++ b/src/app/budget-item-list/budget-item-card/budget-item-card.component.html
@@ -1,5 +1,6 @@
 <div class="root">
-    <div class="budget-item" [ngClass]="{ 'income': item.amount >= 0, 'expense': item.amount < 0 }">
+    <div class="budget-item" (click)="onCardClick()"
+        [ngClass]="{ 'income': item.amount >= 0, 'expense': item.amount < 0 }">
         <div class="description">
             <p>{{item.description}}</p>
         </div>
@@ -8,5 +9,5 @@
         </div>
     </div>
 
-    <div class="x-icon-button"></div>
+    <div class="x-icon-button" (click)="onXButtonClick()"></div>
 </div>
