--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -5,7 +5,9 @@
 
             <div class="budget-items">
                 <div *ngFor="let item of budgetItems">
-                    <app-budget-item-card *ngIf="item.amount >=0" [item]="item" style='margin-bottom: 20px;'>
+                    <app-budget-item-card *ngIf="item.amount >=0" [item]="item"
+                        (xButtonClick)="onDeleteButtonClicked(item)" (cardClick)="onCardClicked()"
+                        style='display:block; margin-bottom: 20px;'>
                     </app-budget-item-card>
                 </div>
             </div>
@@ -17,6 +19,7 @@
             <div class="budget-items">
                 <div *ngFor="let item of budgetItems">
                     <app-budget-item-card *ngIf="item.amount < 0" [item]="item"
+                        (xButtonClick)="onDeleteButtonClicked(item)" (cardClick)="onCardClicked()"
                         style='display:block; margin-bottom: 20px;'>
                     </app-budget-item-card>
                 </div>
