--- a/src/app/add-item-form/add-item-form.component.html
+++ b/src/app/add-item-form/add-item-form.component.html
@@ -14,7 +14,8 @@
                 </p>
             </div>
             <div class="field is-narrow">
-                <button type="submit" class="button is-primary" [disabled]="!itemForm.valid">Add</button>
+                <button type="submit" class="button" [ngClass]="{ 'is-primary': !isNewItem, 'is-success': isNewItem}"
+                    [disabled]="!itemForm.valid">Add</button>
             </div>
 
         </div>
