--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -6,7 +6,7 @@
             <div class="budget-items">
                 <div *ngFor="let item of budgetItems">
                     <app-budget-item-card *ngIf="item.amount >=0" [item]="item"
-                        (xButtonClick)="onDeleteButtonClicked(item)" (cardClick)="onCardClicked()"
+                        (xButtonClick)="onDeleteButtonClicked(item)" (cardClick)="onCardClicked(item)"
                         style='display:block; margin-bottom: 20px;'>
                     </app-budget-item-card>
                 </div>
@@ -19,7 +19,7 @@
             <div class="budget-items">
                 <div *ngFor="let item of budgetItems">
                     <app-budget-item-card *ngIf="item.amount < 0" [item]="item"
-                        (xButtonClick)="onDeleteButtonClicked(item)" (cardClick)="onCardClicked()"
+                        (xButtonClick)="onDeleteButtonClicked(item)" (cardClick)="onCardClicked(item)"
                         style='display:block; margin-bottom: 20px;'>
                     </app-budget-item-card>
                 </div>
